--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,11 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/login']" *ngIf="!identity">Login</a>
         </li>
+        <li class="nav-item" *ngIf="identity">
+          <div class="avatar_mask">
+            <img src="{{url + 'avatar/' + identity.image}}" class="avatar_nav"/>
+          </div>
+        </li>
         <li class="nav-item dropdown" *ngIf="identity">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             {{identity.name + ' ' +   identity.surname}}
@@ -45,7 +50,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Panel de usuario</a>
             <a class="dropdown-item" href="#">Mi perfil</a>
-            <a class="dropdown-item" href="#">Ajustes</a>
+            <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item pointer" (click)="logout()">Cerrar sesión</a>
           </div>
