--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,10 @@
           <a class="nav-link" [routerLink]="['/inicio']">Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Ver Temas</a>
+          <a class="nav-link" [routerLink]="['/temas']">Ver Temas</a>
         </li>
         <li class="nav-item" *ngIf="identity">
-          <a class="nav-link" href="#">Crear Temas</a>
+          <a class="nav-link" [routerLink]="['/panel/crear']">Crear Temas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Compañeros</a>
