--- a/src/app/components/topic-detail/topic-detail.component.html
+++ b/src/app/components/topic-detail/topic-detail.component.html
@@ -21,13 +21,64 @@
         <pre *ngIf="topic.code">
             {{topic.code | lowercase}} 
         </pre>
-        <p id="topic-code" class="mt-2" *ngIf="topic.code">
+        <!--<p id="topic-code" class="mt-2" *ngIf="topic.code">
             <ngx-highlight-js lang="{{topic.lang | lowercase}}" code="{{topic.code | lowercase}}"></ngx-highlight-js>       
-        </p>
+        </p>-->
 
-        <p id="topic-code" class="mt-2" *ngIf="topic.code">
+        <!--<p id="topic-code" class="mt-2" *ngIf="topic.code">
             {{topic.code | lowercase}}       
-        </p>
+        </p>-->
+        <div class="clearfix"></div>
+        <div id="comment-box" class="mt-2">
+            <h3>Comentarios</h3>
+            <hr>
+
+            <div class="alert alert-success mt-3" *ngIf="status == 'success'">
+                El comentario se ha añadido correctamente
+            </div>
+        
+            <div class="alert alert-danger mt-3" *ngIf="status == 'error'">
+                El comentario no se ha añadido
+            </div>
+
+            <form #formComment="ngForm" (ngSubmit)="onSubmit(formComment)" *ngIf="identity">
+                <div class="form-group">
+                    <label for="content">Pon tu comentario</label>
+                    <textarea name="content" #content="ngModel" [(ngModel)]="comment.content" required class="form-control"></textarea>
+                    
+                    <small *ngIf="!content.valid && content.touched" class="invalid-feedback d-block">
+                        El contenido no es válido
+                    </small>
+                </div>
+                <input type="submit" value="Comentar" class="btn btn-success" [disabled]="formComment.invalid" />
+            </form>
+
+            <hr>
+
+            <ul class="list-group list-comments mb-5">
+                <li class="list-group-item comment-item" *ngFor="let comment of topic.comments">
+                    
+                    <div class="avatar_mask float-left mr-3">
+                        <img src="{{url + 'avatar/' + comment.user.image}}" class="avatar_nav"/>
+                    </div>
+                    
+                    <span class="badge badge-primary ml-2">
+                        {{comment.user.name + ' ' + comment.user.surname}}
+                    </span>
+                    
+                    <span class="badge badge-light ml-2">
+                        {{comment.date | amLocale: 'es' | amTimeAgo}}
+                    </span>
+                    
+                    <span class="d-block">
+                        {{comment.content}}
+                    </span>
+
+                    <button (click)="deleteComment(comment._id)" class="btn btn-sm btn-danger float-right" *ngIf="identity._id==comment.user._id">Borrar</button>
+                    
+                </li>
+            </ul>
+        </div>
 
     </div>
     
