--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
           <a class="nav-link" [routerLink]="['/panel/crear']">Crear Temas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Compañeros</a>
+          <a class="nav-link" [routerLink]="['/usuarios']">Compañeros</a>
         </li>
         <li class="nav-item">
           &nbsp;&nbsp;
