--- a/src/app/components/topics/topics.component.html
+++ b/src/app/components/topics/topics.component.html
@@ -1,4 +1,8 @@
-<div class="col-lg-12 mt-3">
+<div class="col-lg-12 mt-3" *ngIf="!topics">
+    <img src="/assets/img/loader.gif" />
+</div>
+
+<div class="col-lg-12 mt-3" *ngIf="topics">
     <h1>{{page_title}}</h1>
     <hr>
 
