--- a/src/app/components/topics/topics.component.html
+++ b/src/app/components/topics/topics.component.html
@@ -25,7 +25,7 @@
     <div class="clearfix"></div>
     
     <!-- NAVEGACIÓN DE PAGINACIÓN -->
-        <ul class="pagination mt-4">
+        <ul class="pagination mt-4" *ngIf="!no_paginate">
           <li class="page-item">
               <a class="page-link" [routerLink]="['/temas', prev_page]">&laquo;</a>
           </li>
@@ -33,7 +33,7 @@
               <a class="page-link" [routerLink]="['/temas', num]">{{num}}</a>
           </li>
           <li class="page-item">
-              <a class="page-link" [routerLink]="['/temas', next_page]">&r  aquo;</a>
+              <a class="page-link" [routerLink]="['/temas', next_page]">&raquo;</a>
           </li>
         </ul>
 
